--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
     <div id="wrapper">
-        <div class="slider">
+        <div id="slider">
             
-            
+
             <button class="up"><i class="fa-solid fa-circle-arrow-up"></i></button>
             <button class="down"><i class="fa-solid fa-circle-arrow-down"></i></button>
         </div>
