add preview with js

--- a/index.html
+++ b/index.html
@@ -20,22 +20,7 @@
             <button class="up"><i class="fa-solid fa-circle-arrow-up"></i></button>
             <button class="down"><i class="fa-solid fa-circle-arrow-down"></i></button>
         </div>
-        <div class="preview">
-            <div class="boxPreview">
-                <img src="./img/01.webp" alt="img1">
-            </div>
-            <div class="boxPreview">
-                <img src="./img/02.webp" alt="img1">
-            </div>
-            <div class="boxPreview">
-                <img src="./img/03.webp" alt="img1">
-            </div>
-            <div class="boxPreview">
-                <img src="./img/04.webp" alt="img1">
-            </div>
-            <div class="boxPreview">
-                <img src="./img/05.webp" alt="img1">
-            </div>
+        <div id="preview">
 
         </div>
     </div>
